<resources>
    <string name="app_name">DriverSdkCustomerExample</string>
    <string name="notification_in_shift_title">Title</string>
    <string name="notification_in_shift_message">Message</string>

    <string name="button_text_login">Login</string>
    <string name="button_text_logout">Logout</string>
    <string name="button_text_start_task">Start task</string>
    <string name="button_text_get_active_task">Get active task</string>
    <string name="button_text_start_sharing_location">Start sharing location</string>
    <string name="button_text_stop_sharing_location">Stop</string>
    <string name="button_text_waypoint_arrive">Arrive</string>
    <string name="button_text_waypoint_leave">Leave</string>
    <string name="hint_task_id">Task</string>
    <string name="hint_waypoint_id">Waypoint</string>
    <string name="title_activity_customer">CustomerActivity</string>

    <string name="scheduled_at">"Scheduled At"</string>
    <string name="scheduled_for">"Scheduled For"</string>
    <string name="time_window_title">"Window"</string>
    <string name="contact">"Contact"</string>
    <string name="order_description">"Order Description"</string>
    <string name="eta_title">"ETA"</string>
    <string name="inventory_pricing_amount_paid">"Amount paid"</string>
    <string name="create_order_desc">"To Begin:\nCreate order with \"task_type_id\": 6 on Bringg see
        https://developers.bringg.com/reference#create-task\nWhen creating order for an existing customer add Bringg \"customer_id\" to the request payload."</string>
    <string name="login_description">\n\nBefore all other SDK calls user has to Log in to Bringg platform:\nLogin tokens should be generated using the \"user_id\" parameter found on the create order response payload, see https://developers.bringg.com/reference#generate-customer-one-time-code\n\nUse tokens from response payload to login:</string>
    <string name="become_offline">Become Offline</string>
    <string name="become_online">Become Online</string>
    <string name="skip">Skip</string>

    <!-- vehicle -->
    <string name="vehicle_details_title">Vehicle Details</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="vehicle_license_plate">License Plate</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="vehicle_parking_spot">Parking Area / Spot Number</string>
    <string name="vehicle_save">Save Vehicle</string>
</resources>
