<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/button_text_login"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/button_text_logout" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/taskIdEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_task_id"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/button_start_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/button_text_start_task" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_sharing_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/button_text_start_sharing_location" />

            <Button
                android:id="@+id/button_stop_sharing_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/button_text_stop_sharing_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/taskWpIdEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_task_id"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/wpIdEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_waypoint_id"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/button_waypoint_arrive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/button_text_waypoint_arrive" />

            <Button
                android:id="@+id/button_waypoint_leave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/button_text_waypoint_leave" />

        </LinearLayout>

    </LinearLayout>

    <com.github.pedrovgs.lynx.LynxView xmlns:lynx="http://schemas.android.com/apk/res-auto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        lynx:layout_constraintBottom_toBottomOf="parent"
        lynx:layout_constraintEnd_toEndOf="parent"
        lynx:layout_constraintStart_toStartOf="parent"
        lynx:layout_constraintTop_toBottomOf="@id/layout_buttons"
        lynx:text_size="12sp" />

</androidx.constraintlayout.widget.ConstraintLayout>